remove rsync from dev env; added $Icon entity

--- a/k8s/overlays/development/patches/be-deployment.yaml
+++ b/k8s/overlays/development/patches/be-deployment.yaml
@@ -16,3 +16,13 @@ spec:
           value: "false"
         - name: FRMDB_IS_PROD_ENV
           value: "true"
+        volumeMounts:
+          - mountPath: /wwwroot/git
+            $patch: delete
+      volumes:
+      - name: git-persistence
+        $patch: delete
+        # persistentVolumeClaim:
+        # hostPath:
+        #   path: /d/code/metawiz/febegit
+        #   type: Directory
