--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "skaffold": "skaffold dev -n \"`git branch|grep '^*'|cut -d ' ' -f2`\" -p dev --port-forward=true",
         "watch-skaffold": "npm run skaffold",
         "watch-x-sass": "sleep 10; sass --style compressed --watch fe/src/frmdb-editor/frmdb-editor.directive.scss:formuladb/frmdb-editor.min.css",
-        "watch-rsync": "sleep 15; while true; do sleep 3; bash rsync.sh 2>/dev/null; done",
+        "_rem_watch-rsync": "sleep 15; while true; do sleep 3; bash rsync.sh 2>/dev/null; done",
         "live-server": "concurrently -k \"npm run watch-rsync\" \"bash serve.sh\" ",
         "-rem-watch-live-server": "bash serve.sh",
         "serve-tmux": "bash ci/prepare-dev.sh && tmux new-session 'npm run watch-compile' ';' split-window -h 'npm run bundle:watch' ';' split-window 'npm run watch-rsync' ';' select-layout tiled ';' split-window -h 'npm run watch-skaffold' ';' select-layout tiled",
@@ -32,10 +32,6 @@
         "dev:be": "ts-node-dev --respawn --transpileOnly ./be/src/server.ts",
         "preprocess-icons": "svgo -f formuladb/icons/svg -o formuladb/icons/svgo --disable=removeViewBox --enable=removeDimensions --config '{\"plugins\": [{\"convertPathData\": {\"noSpaceAfterFlags\": false}}, {\"mergePaths\": {\"noSpaceAfterFlags\": false}}]}'",
         "generate-icons": "icon-font-generator -p frmdb-i formuladb/icons/svgo/*.svg -o formuladb/icons -n frmdb-icons",
-        "preprocess-user-icons": "svgo -f formuladb-env/icons/formuladb/svg -o formuladb-env/icons/formuladb/svgo --disable=removeViewBox --enable=removeDimensions --config '{\"plugins\": [{\"convertPathData\": {\"noSpaceAfterFlags\": false}}, {\"mergePaths\": {\"noSpaceAfterFlags\": false}}]}'",
-        "generate-user-icons": "icon-font-generator -p frmdb-i formuladb-env/icons/formuladb/svgo/*.svg -o formuladb-env/icons/formuladb -n fdb-i",
-        "preprocess-user-env-icons": "svgo -f /wwwroot/git/formuladb-env/icons/formuladb/svg -o /wwwroot/git/formuladb-env/icons/formuladb/svgo --disable=removeViewBox --enable=removeDimensions --config '{\"plugins\": [{\"convertPathData\": {\"noSpaceAfterFlags\": false}}, {\"mergePaths\": {\"noSpaceAfterFlags\": false}}]}'",
-        "generate-user-env-icons": "icon-font-generator -p frmdb-i /wwwroot/git/formuladb-env/icons/formuladb/svgo/*.svg -o /wwwroot/git/formuladb-env/icons/formuladb -n fdb-i",
         "generate-json-schemas": "for i in App Entity SchemaEntityList; do typescript-json-schema ./tsconfig.json $i > core/src/schemas/$i.schema.json ; done",
         "generate-look-css": "cd themes; bash ci/build.sh --compile",
         "sync-dev-static-assets": "watch 'bash ci/copy-static-assets-to-dev-ngunx-pod.sh' formuladb-env/static formuladb-themes"
