--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -55,8 +55,7 @@
             "name": "FE serve",
             "type": "chrome",
             "request": "launch",
-            "_url": "http://frmdb.localhost/formuladb/editor.html#/frmdb-apps/formuladb_io/index.html",
-            "url": "http://frmdb.localhost/en-lux-cb8670-363636-Clean-$EDIT$/frmdb-apps/themes/elements.html",
+            "url": "http://frmdb.localhost/en-lux-cb8670-363636-Clean/frmdb-apps/themes/elements.html?frmdbRender=editor",
             "webRoot": "${workspaceFolder}",
             "trace": true,
             "sourceMapPathOverrides": {
