--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ stages:
   - build_images_and_deploy_dev
   - test_postgres
   - test_stress
+  - test_api
   - e2e_dev_env
   - build_images_and_deploy_staging
   - e2e_staging
@@ -80,6 +81,16 @@ test_stress:
   script:
     - export KUBECONFIG="${PWD}/k8s/production-kube-config.conf"
     - ./ci/jobs.sh $CI_JOB_NAME
+  <<: *cache_node_modules_and_artifacts
+
+test_api:
+  stage: test_stress
+  script:
+    - bash api-tests.sh
+  artifacts:
+    reports:
+      junit: api-tests.junit.xml
+    when: always    
   <<: *cache_node_modules_and_artifacts
 
 e2e_dev_env:
