--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
         "pg": "^7.17.1",
         "pg-promise": "10.3.5",
         "pouchdb-collate": "^7.1.1",
+        "puppeteer": "^2.1.1",
         "serve-favicon": "~2.5.0",
         "serve-index": "^1.9.1",
         "short-uuid": "^3.1.1",
