--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
         "@google-cloud/storage": "^4.2.0",
         "@google-cloud/translate": "^5.1.4",
         "@types/jasmine": "^3.4.6",
+        "@types/puppeteer": "^2.0.1",
         "acorn": "^7.1.0",
         "ag-grid-community": "^22.1.1",
         "ag-grid-enterprise": "^22.1.1",
