--- a/k8s/base/resources/be-deployment.yaml
+++ b/k8s/base/resources/be-deployment.yaml
@@ -4,6 +4,9 @@ metadata:
   name: be
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      service: be
   strategy: {}
   template:
     metadata:
@@ -30,6 +33,8 @@ spec:
           value: /etc/gcp/sa_credentials.json
         - name: FRMDB_AUTH_ENABLED
           value: "true"
+        - name: FRMDB_ENV_NAME
+          value: $(NAMESPACE_NAME)
         image: registry.gitlab.com/metawiz/febe/formuladb-be
         name: be
         ports:
