--- a/k8s/base/kustomization.yaml
+++ b/k8s/base/kustomization.yaml
@@ -1,4 +1,4 @@
-namespace: n321b9c5711a002a3aa0f3ad74b51f215a0c2c7bd #TBD_ENV_NAME
+namespace: staging #TBD_ENV_NAME
 resources:
 - resources/be-deployment.yaml
 - resources/be-service.yaml
