--- a/k8s/base/resources/db-deployment.yaml
+++ b/k8s/base/resources/db-deployment.yaml
@@ -6,6 +6,9 @@ metadata:
   name: db
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      service: db
   strategy:
     type: Recreate
   template:
