don't run videos in febe

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ stages:
   - build_images_and_deploy_production
   - e2e_production
   # - e2e_all_example_apps
-  - e2e_staging_with_videos
+  # - e2e_staging_with_videos
   - cleanup
 
 .cache_node_modules_and_artifacts: &cache_node_modules_and_artifacts
