work on getOptionsForReferenceToProperty

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -55,7 +55,8 @@
             "name": "FE serve",
             "type": "chrome",
             "request": "launch",
-            "url": "http://frmdb.localhost/en-basic-008cba-eeeeee-Clean/frmdb-apps/hotel-booking/index.html?frmdbRender=editor",
+            "url": "http://frmdb.localhost/en-basic-008cba-eeeeee-Clean/frmdb-apps/hotel-booking/booking.html?frmdbRender=editor&%24FRMDB.RoomBooking%5B%5D.start_date=2020-03-23&%24FRMDB.RoomBooking%5B%5D.end_date=2020-03-26&%24FRMDB.RoomBooking%5B%5D.nb_adults=1&%24FRMDB.RoomBooking%5B%5D.nb_children=0",
+            "__url": "http://frmdb.localhost/en-basic-008cba-eeeeee-Clean/frmdb-apps/hotel-booking/index.html?frmdbRender=editor",
             "_url": "http://frmdb.localhost/en-basic-cb8670-363636-Clean/frmdb-apps/base-app/overlays.html",
             "webRoot": "${workspaceFolder}",
             "trace": true,
