--- a/git/formuladb-env/db/RoomBooking.yaml
+++ b/git/formuladb-env/db/RoomBooking.yaml
@@ -54,16 +54,16 @@ props:
         name: cost
         propType_: FORMULA
         formula: days * 100
-    total_rooms:
-        name: total_rooms
+    total_number_of_rooms:
+        name: total_number_of_rooms
         propType_: REFERENCE_TO
         referencedEntityName: RoomType
-        referencedPropertyName: total_rooms
-    booked_rooms:
-        name: booked_rooms
+        referencedPropertyName: total_number_of_rooms
+    number_of_booked_rooms:
+        name: number_of_booked_rooms
         propType_: FORMULA
         formula: 'COUNTIF(RoomBooking, AND(room_type == @[room_type], INTERSECTS(DATERANGE(start_date, end_date),DATERANGE(@[start_date], @[end_date]))))'
-    available_rooms:
-        name: available_rooms
+    number_of_available_rooms:
+        name: number_of_available_rooms
         propType_: FORMULA
-        formula: 'total_rooms - booked_rooms'
+        formula: 'total_number_of_rooms - number_of_booked_rooms'
