--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -143,7 +143,7 @@ e2e_production:
   script:
     - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@gitlab.com/metawiz/e2e.git
 
-e2e_staging_with_videos:
+.e2e_staging_with_videos:
   stage: e2e_staging_with_videos
   script:
     - export KUBECONFIG="${PWD}/k8s/production-kube-config.conf"
