upgrade Deployment to apps/v1, started adding entities

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,5 +64,6 @@
     "git.ignoreLimitWarning": true,
     "files.eol": "\n",
     "html.format.wrapLineLength": 160,
-    "svg.preview.background": "transparent"
+    "svg.preview.background": "transparent",
+    "terminal.integrated.allowChords": false
 }
