--- a/k8s/extras/elasticstack/heartbeat-kubernetes.yaml
+++ b/k8s/extras/elasticstack/heartbeat-kubernetes.yaml
@@ -30,7 +30,7 @@ data:
         host: "http://kibana-kibana.monitoring:5601" 
 
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: heartbeat
