--- a/k8s/base/kustomization.yaml
+++ b/k8s/base/kustomization.yaml
@@ -1,4 +1,4 @@
-namespace: master #TBD_ENV_NAME
+namespace: orbicobeauty #TBD_ENV_NAME
 resources:
 - resources/be-deployment.yaml
 - resources/be-service.yaml
@@ -13,6 +13,6 @@ vars:
   objref:
     kind: Deployment
     name: be
-    apiVersion: extensions/v1beta1
+    apiVersion: apps/v1
   fieldref:
     fieldpath: metadata.namespace
