--- a/k8s/extras/elasticstack/metricbeat-kubernetes-remote-cluster.yaml
+++ b/k8s/extras/elasticstack/metricbeat-kubernetes-remote-cluster.yaml
@@ -231,7 +231,7 @@ data:
       period: 10s
 ---
 # Deploy singleton instance in the whole cluster for some unique data sources, like kube-state-metrics
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: metricbeat
