--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "Backend",
         "COUNTIF",
         "DATETIME",
+        "Datasource",
         "EOMONTH",
         "Frmdb",
         "HLOOKUP",
