--- a/k8s/overlays/onprem/kustomization.yaml
+++ b/k8s/overlays/onprem/kustomization.yaml
@@ -4,5 +4,5 @@ patches:
 - patches/be-deployment.yaml
 - patches/db-service.yaml
 resources:
-- resources/ingress.yaml
+# - resources/ingress.yaml
 - resources/git-persistence-persistentvolumeclaim.yaml
