fixed app list and filter bar

--- a/git/formuladb-env/db/AppCategory.yaml
+++ b/git/formuladb-env/db/AppCategory.yaml
@@ -5,7 +5,7 @@ props:
         name: _id
         propType_: STRING
         allowNull: false
-    order:
+    guiorder:
         name: _id
         propType_: STRING
         allowNull: false
