--- a/.gitattributes
+++ b/.gitattributes
@@ -12,3 +12,4 @@ icons/**/*.svg filter=lfs diff=lfs merge=lfs -text
 css/**.css filter=lfs diff=lfs merge=lfs -text
 **/*.svg filter=lfs diff=lfs merge=lfs -text
 *.mp4 filter=lfs diff=lfs merge=lfs -text
+**/*.gz filter=lfs diff=lfs merge=lfs -text
