--- a/k8s/base/kustomization.yaml
+++ b/k8s/base/kustomization.yaml
@@ -1,4 +1,4 @@
-namespace: master #TBD_ENV_NAME
+namespace: frmdb-master #TBD_ENV_NAME
 resources:
 - resources/be-deployment.yaml
 - resources/be-service.yaml
@@ -6,7 +6,7 @@ resources:
 - resources/db-service.yaml
 - resources/pg-persistence-persistentvolumeclaim.yaml 
 - resources/service-account-secret.yaml
-- resources/pg-backup-deployment.yaml
+# - resources/pg-backup-deployment.yaml
 #wildcard support removed for some reason https://github.com/kubernetes-sigs/kustomize/issues/119
 vars:
 - name: NAMESPACE_NAME
