--- a/k8s/extras/local-dev/filebeat.yaml
+++ b/k8s/extras/local-dev/filebeat.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: filebeat-config
+  name: frmdb-filebeat-config
   labels:
     k8s-app: filebeat
 data:
@@ -23,8 +23,8 @@ data:
           when:
             or:
               - not:
-                  equals:
-                    kubernetes.namespace: ${FRMDB_ENV_NAME}
+                  contains:
+                    kubernetes.namespace: frmdb-
               - contains:
                   kubernetes.pod.name: filebeat
     output.elasticsearch:
@@ -35,7 +35,7 @@ data:
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
-  name: filebeat
+  name: frmdb-filebeat
   labels:
     k8s-app: filebeat
 spec:
@@ -103,7 +103,7 @@ spec:
       - name: config
         configMap:
           defaultMode: 0600
-          name: filebeat-config
+          name: frmdb-filebeat-config
       - name: varlibdockercontainers
         hostPath:
           path: /var/lib/docker/containers
