more work on backup and restore

--- a/git/formuladb-env/db/Room.yaml
+++ b/git/formuladb-env/db/Room.yaml
@@ -12,5 +12,5 @@ props:
     room_type:
         name: room_type
         propType_: REFERENCE_TO
-        referencedEntityName: RoomType
+        referencedEntityName: Room_Type
         referencedPropertyName: _id
