--- a/k8s/base/resources/be-deployment.yaml
+++ b/k8s/base/resources/be-deployment.yaml
@@ -23,12 +23,12 @@ spec:
         volumeMounts:
         - mountPath: /wwwroot/git
           name: git-persistence
-      - name: init-db
-        image: registry.gitlab.com/metawiz/febe/formuladb-be
-        command: ['bash', 'scripts/init-db.sh']
-        volumeMounts:
-        - mountPath: /wwwroot/git
-          name: git-persistence
+      # - name: init-db
+      #   image: registry.gitlab.com/metawiz/febe/formuladb-be
+      #   command: ['bash', 'scripts/init-db.sh']
+      #   volumeMounts:
+      #   - mountPath: /wwwroot/git
+      #     name: git-persistence
       containers:
       - env:
         # - name: DEBUG
