--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -55,7 +55,7 @@
             "name": "FE serve",
             "type": "chrome",
             "request": "launch",
-            "url": "http://frmdb.localhost/en-basic-008cba-eeeeee-Clean/frmdb-apps/hotel-booking/booking.html?frmdbRender=editor&%24FRMDB.RoomBooking%5B%5D.start_date=2020-03-23&%24FRMDB.RoomBooking%5B%5D.end_date=2020-03-26&%24FRMDB.RoomBooking%5B%5D.nb_adults=1&%24FRMDB.RoomBooking%5B%5D.nb_children=0",
+            "url": "http://frmdb.localhost/en-basic-008cba-eeeeee-Clean/frmdb-apps/hotel-booking/booking.html?frmdbRender=editor&%24FRMDB.Room_Booking%5B%5D.start_date=2020-03-23&%24FRMDB.Room_Booking%5B%5D.end_date=2020-03-26&%24FRMDB.Room_Booking%5B%5D.nb_adults=1&%24FRMDB.Room_Booking%5B%5D.nb_children=0",
             "__url": "http://frmdb.localhost/en-basic-008cba-eeeeee-Clean/frmdb-apps/hotel-booking/index.html?frmdbRender=editor",
             "_url": "http://frmdb.localhost/en-basic-cb8670-363636-Clean/frmdb-apps/base-app/overlays.html",
             "webRoot": "${workspaceFolder}",
@@ -103,8 +103,12 @@
             "port": 9232,
             "request": "launch",
             "cwd": "${workspaceRoot}",
-            "program": "${workspaceFolder}/dist-be/frmdb-cli.js",
+            "program": "${workspaceFolder}/dist-be/frmdb-be.js",
             "args": [
+                "init-db"
+            ],
+            "-args": [
+                "fix-html",
                 "${relativeFile}"
             ],
             "sourceMaps": true,
