--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "@types/js-yaml": "^3.12.1",
         "@types/lodash": "^4.14.149",
         "@types/node": "^13.1.6",
+        "@types/yargs": "^15.0.4",
         "bootstrap": "^4.4.1",
         "bootswatch": "^4.4.1",
         "browser-sync": "^2.26.7",
@@ -153,7 +154,8 @@
         "source-map-support": "^0.5.16",
         "svgo": "^1.3.2",
         "tslib": "^1.10.0",
-        "wait-on": "^3.3.0"
+        "wait-on": "^3.3.0",
+        "yargs": "^15.3.1"
     },
     "_moduleAliases": {
         "@domain": "./tsc-out/domain/src",
