--- a/git/formuladb-env/db/AppCategory.yaml
+++ b/git/formuladb-env/db/AppCategory.yaml
@@ -6,6 +6,6 @@ props:
         propType_: STRING
         allowNull: false
     guiorder:
-        name: _id
+        name: guiorder
         propType_: STRING
         allowNull: false
