--- a/k8s/base/kustomization.yaml
+++ b/k8s/base/kustomization.yaml
@@ -1,4 +1,4 @@
-namespace: frmdb-master #TBD_ENV_NAME
+namespace: nb487a90ae9e76ab1eb7f3f14bd4bec207d0a0037 #TBD_ENV_NAME
 resources:
 - resources/be-deployment.yaml
 - resources/be-service.yaml
