--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ stages:
   - build
   - test_and_bundle
   - build_images_and_deploy_dev
-  - testpg_and_stress_and_e2e_dev_env
+  - e2e_dev_env
   - build_images_and_deploy_staging
   - e2e_staging
   - build_images_and_deploy_production
@@ -62,14 +62,14 @@ test_fe:
   <<: *cache_node_modules_and_artifacts
 
 test_postgres:
-  stage: testpg_and_stress_and_e2e_dev_env
+  stage: test_and_bundle
   script:
     - export KUBECONFIG="${PWD}/k8s/production-kube-config.conf"
     - ./ci/jobs.sh $CI_JOB_NAME
   <<: *cache_node_modules_and_artifacts
 
 test_stress:
-  stage: testpg_and_stress_and_e2e_dev_env
+  stage: test_and_bundle
   retry: 2
   script:
     - export KUBECONFIG="${PWD}/k8s/production-kube-config.conf"
@@ -77,7 +77,7 @@ test_stress:
   <<: *cache_node_modules_and_artifacts
 
 test_api:
-  stage: testpg_and_stress_and_e2e_dev_env
+  stage: e2e_dev_env
   script:
     - bash api-tests.sh
   artifacts:
@@ -87,7 +87,7 @@ test_api:
   <<: *cache_node_modules_and_artifacts
 
 e2e_dev_env:
-  stage: testpg_and_stress_and_e2e_dev_env
+  stage: e2e_dev_env
   retry: 2
   script:
     - export KUBECONFIG="${PWD}/k8s/production-kube-config.conf"
