--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,7 +65,7 @@ test_fe:
   <<: *cache_node_modules_and_artifacts
 
 test_postgres:
-  stage: test_and_bundle
+  stage: build_images_and_deploy_dev
   script:
     - ./ci/jobs.sh $CI_JOB_NAME
   <<: *cache_node_modules_and_artifacts
