--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,6 +36,7 @@ build:
 bundle:
   stage: test_and_bundle
   script:
+    - ls tsc-out node_modules
     - npm run bundle
   cache:
     key: ${CI_COMMIT_SHA}
