--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -79,7 +79,7 @@
             "name": "FE serve",
             "type": "chrome",
             "request": "launch",
-            "url": "http://frmdb.localhost/en-basic-008cba-eeeeee-Clean/hotel-booking/booking.html?frmdbRender=editor&%24FRMDB.Room_Booking%5B%5D.start_date=2020-03-23&%24FRMDB.Room_Booking%5B%5D.end_date=2020-03-26&%24FRMDB.Room_Booking%5B%5D.nb_adults=1&%24FRMDB.Room_Booking%5B%5D.nb_children=0",
+            "url": "http://frmdb.localhost/en-basic-008cba-eeeeee-Clean/hotel-booking/booking.html?frmdbRender=editor&%24FRMDB.PageParameters.new_room_booking.start_date=2020-04-07&%24FRMDB.PageParameters.new_room_booking.end_date=2020-04-16&%24FRMDB.PageParameters.new_room_booking.nb_adults=1&%24FRMDB.PageParameters.new_room_booking.nb_children=0",
             "-url": "http://frmdb.localhost/en-basic-008cba-eeeeee-Clean/hotel-booking/index.html?frmdbRender=editor",
             "--url": "http://frmdb.localhost/en-basic-cb8670-363636-Clean/base-app/overlays.html",
             "webRoot": "${workspaceFolder}",
