--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -84,7 +84,7 @@ test_fe:
     policy: pull
 
 test_postgres:
-  stage: build_images_and_deploy_dev
+  stage: test_and_bundle
   script:
     - ./ci/jobs.sh $CI_JOB_NAME
   cache:
