--- a/package.json
+++ b/package.json
@@ -44,11 +44,15 @@
         "@google-cloud/text-to-speech": "^2.1.2",
         "@types/bootstrap": "^4.3.1",
         "@types/d3": "^5.7.2",
+        "@types/express": "^4.17.4",
+        "@types/express-session": "^1.17.0",
         "@types/jasmine": "^3.5.0",
         "@types/jquery": "^3.3.31",
         "@types/js-yaml": "^3.12.1",
         "@types/lodash": "^4.14.149",
         "@types/node": "^13.1.6",
+        "@types/passport": "^1.0.3",
+        "@types/passport-local": "^1.0.33",
         "@types/yargs": "^15.0.4",
         "bootstrap": "^4.4.1",
         "bootswatch": "^4.4.1",
