--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "@types/jquery": "^3.3.31",
         "@types/js-yaml": "^3.12.1",
         "@types/lodash": "^4.14.149",
+        "@types/micromatch": "^4.0.1",
         "@types/node": "^13.1.6",
         "@types/passport": "^1.0.3",
         "@types/passport-local": "^1.0.33",
@@ -137,6 +138,7 @@
         "jsep": "git+https://github.com/acristu/jsep.git",
         "lodash": "^4.17.15",
         "md5": "^2.2.1",
+        "micromatch": "^4.0.2",
         "mime": "^2.4.4",
         "mkdirp": "^0.5.1",
         "module-alias": "^2.2.2",
@@ -158,6 +160,7 @@
         "source-map-support": "^0.5.16",
         "svgo": "^1.3.2",
         "tslib": "^1.10.0",
+        "utility-types": "^3.10.0",
         "wait-on": "^3.3.0",
         "yargs": "^15.3.1"
     },
