editor for raw attributes; fix specs

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "watch-x-compile": "npm run compile -- -w --preserveWatchOutput",
         "bundle": "webpack",
         "bundle:watch": "concurrently -k \"webpack --watch --mode development\" \"npm run watch-sass\" ",
+        "tmux-bundle": "webpack --watch --mode development --progress",
         "watch-x-bundle": "webpack --watch --mode development",
         "docker:be": "docker build -t formuladb-be -f Dockerfile.be . && docker tag formuladb-be registry.gitlab.com/metawiz/febe/formuladb-be:${npm_package_version} && docker tag formuladb-be registry.gitlab.com/metawiz/febe/formuladb-be:latest",
         "docker:fe": "docker build -t formuladb-maps -f Dockerfile.fe . && docker tag formuladb-fe registry.gitlab.com/metawiz/febe/formuladb-fe:${npm_package_version}",
@@ -22,7 +23,7 @@
         "_rem_watch-rsync": "sleep 15; while true; do sleep 3; bash rsync.sh 2>/dev/null; done",
         "live-server": "concurrently -k \"npm run watch-rsync\" \"bash serve.sh\" ",
         "-rem-watch-live-server": "bash serve.sh",
-        "serve-tmux": "bash ci/prepare-dev.sh && tmux set -g status off ';' new-session 'npm run watch-x-compile' ';' split-window -h 'npm run watch-x-bundle' ';' split-window -h 'npm run watch-skaffold' ';' select-layout tiled",
+        "serve-tmux": "bash ci/prepare-dev.sh && tmux set -g status off ';' new-session 'npm run watch-x-compile' ';' split-window -h 'npm run tmux-bundle' ';' split-window -h 'npm run watch-skaffold' ';' select-layout tiled",
         "serve": "bash ci/prepare-dev.sh && concurrently -k \"npm:watch-*\" ",
         "serve-fe": "bash ci/prepare-dev.sh && concurrently -k \"npm:watch-x-*\" \"npm run start-dev-fe\" ",
         "test": "node jasmine.js",
